--- a/Frontend/views/Pages/dashboard.ejs
+++ b/Frontend/views/Pages/dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="dashboard-wrapper">
   <aside class="sidebar">
@@ -34,7 +34,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
   // Define the userId from the EJS user object
