--- a/Frontend/views/Pages/events.ejs
+++ b/Frontend/views/Pages/events.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="events-wrapper">
   <aside class="sidebar">
@@ -36,7 +36,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
     const userId = "<%= user.user_id %>"; // treat it as a string
