--- a/Frontend/views/Pages/forums.ejs
+++ b/Frontend/views/Pages/forums.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="forums-wrapper">
   <aside class="sidebar">
@@ -37,7 +37,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
   const userId = document.querySelector('.forums-main').dataset.userId;
