--- a/Frontend/views/Pages/groups.ejs
+++ b/Frontend/views/Pages/groups.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="groups-wrapper">
   <aside class="sidebar">
@@ -22,7 +22,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
   const userId = document.querySelector('.groups-main').dataset.userId;
