--- a/Frontend/views/Pages/explorer.ejs
+++ b/Frontend/views/Pages/explorer.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="explorer-wrapper">
   <aside class="sidebar">
@@ -37,7 +37,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
     let interestsMap = {};
