--- a/Frontend/views/Pages/login.ejs
+++ b/Frontend/views/Pages/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="auth-wrapper">
   <div class="auth-box">
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 <script>
     document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
