--- a/Frontend/views/Pages/register.ejs
+++ b/Frontend/views/Pages/register.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="auth-wrapper">
   <div class="auth-box">
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
   document.getElementById('registerForm').addEventListener('submit', async (e) => {
