--- a/Frontend/views/Pages/settings.ejs
+++ b/Frontend/views/Pages/settings.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('/partials/header') %>
 
 <div class="settings-wrapper">
   <aside class="sidebar">
@@ -42,7 +42,7 @@
   </main>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('/partials/footer') %>
 
 <script>
   const userId = document.querySelector('.settings-main').dataset.userId;
