--- a/Frontend/views/Pages/landing.ejs
+++ b/Frontend/views/Pages/landing.ejs
@@ -1,4 +1,4 @@
-<%- include('/partials/header') %>
+<% include partials/header %>
 
 <!-- Link the stylesheet -->
 <link rel="stylesheet" href="/assets/styles.css">
@@ -15,4 +15,4 @@
   </div>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include partials/footer %>
